[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Environment/SuddenDeath.gd" type="Script" id=1]

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 1.5

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 552, 208 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 286, 372 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TopWall/TopLine:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 3, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DownWall/DownLine:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 3, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeftWall/LeftLine:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 3, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RightWall/RightLine:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 3, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "glow"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TopWall/TopLine:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 3.5, 0, 0, 1 ), Color( 3, 0, 0, 1 ), Color( 3.5, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DownWall/DownLine:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 3.5, 0, 0, 1 ), Color( 3, 0, 0, 1 ), Color( 3.5, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeftWall/LeftLine:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 3.5, 0, 0, 1 ), Color( 3, 0, 0, 1 ), Color( 3.5, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RightWall/RightLine:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 3.5, 0, 0, 1 ), Color( 3, 0, 0, 1 ), Color( 3.5, 0, 0, 1 ) ]
}

[node name="SuddenDeath" type="Node2D"]
z_index = 2
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="TopWall" type="Area2D" parent="."]
position = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( 520, -148 )
shape = SubResource( 1 )

[node name="TopLine" type="Line2D" parent="TopWall"]
modulate = Color( 3, 0, 0, 1 )
position = Vector2( 0, 48 )
points = PoolVector2Array( 216, 0, 808, 0 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="DownWall" type="Area2D" parent="."]
position = Vector2( -8, 656 )

[node name="DownLine" type="Line2D" parent="DownWall"]
modulate = Color( 3, 0, 0, 1 )
position = Vector2( 24, -72 )
points = PoolVector2Array( 200, 0, 792, 0 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownWall"]
position = Vector2( 560, 128 )
shape = SubResource( 1 )

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2( 80, 624 )

[node name="LeftLine" type="Line2D" parent="LeftWall"]
modulate = Color( 3, 0, 0, 1 )
position = Vector2( -256, -576 )
points = PoolVector2Array( 392, -32, 392, 536 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( -136, -328 )
shape = SubResource( 2 )

[node name="RightWall" type="Area2D" parent="."]
position = Vector2( 40, 624 )

[node name="RightLine" type="Line2D" parent="RightWall"]
modulate = Color( 3, 0, 0, 1 )
position = Vector2( -48, -616 )
points = PoolVector2Array( 816, 8, 816, 576 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 1040, -320 )
shape = SubResource( 2 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HoldTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/glow = SubResource( 5 )
